// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Loader] renders successfully 1`] = `
<div
  className="loader centered"
>
  Loading
</div>
`;

exports[`[Loader] when is not centered renders successfully 1`] = `
<div
  className="loader"
>
  Loading
</div>
`;

exports[`[Loader] when label set renders successfully 1`] = `
<div
  className="loader centered"
>
  Loading
</div>
`;
